fix minor layout issue with a label in the patient dashboard.[cosmin/mario]

--- a/omod/src/main/webapp/resources/patientregistration.css
+++ b/omod/src/main/webapp/resources/patientregistration.css
@@ -72,6 +72,10 @@ input.error, textarea.error {
     vertical-align: middle;
 }
 
+.spanQuestionBox span{
+    font-size: 0.8em;
+}
+
 .modalConfirmBtn {
     border : 0;
     height : 72px;
